// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Timestamp absolute time with formatting 1`] = `
<DocumentFragment>
  <span
    class="timestamp"
    data-state="closed"
  >
    01:02:00
  </span>
</DocumentFragment>
`;

exports[`Timestamp mocked current time 1`] = `
<DocumentFragment>
  <span
    class="timestamp"
    data-state="closed"
  >
    about 22 hours ago
  </span>
</DocumentFragment>
`;

exports[`Timestamp noAbout 1`] = `
<DocumentFragment>
  <span
    class="timestamp"
    data-state="closed"
  >
    22 hours ago
  </span>
</DocumentFragment>
`;

exports[`Timestamp with time time 1`] = `
<DocumentFragment>
  <span
    class="timestamp"
    data-state="closed"
  >
    about 21 hours ago
  </span>
</DocumentFragment>
`;
